add decition drivers

--- a/MEMO/642115005_memo.md
+++ b/MEMO/642115005_memo.md
@@ -32,7 +32,7 @@ N/A
 ### solution for problem 5. Replace the Storage device
 
 ## Decision Driver
-N/A
+Secure the power cable 
 
 ## References
 N/A
@@ -124,7 +124,7 @@ N/A
 ### solution for problem 3. Tape drives and libraries might report information back to IBM Spectrum Protect about the error encountered. This information is reported in one or more of the messages.
 
 ## Decision Driver
-N/A
+If a problem can be easily or consistently recreated, it might be possible to isolate the cause of the problem to a specific sequence of events.
 
 ## References
 N/A
@@ -274,7 +274,7 @@ N/A
 ### solution for problem 1. use secired containers
 
 ## Decision Driver
-N/A
+use secired containers
 
 ## References
 N/A
