add more decision

--- a/MEMO/642115005_memo.md
+++ b/MEMO/642115005_memo.md
@@ -68,14 +68,14 @@ N/A
 4. Legacy IT Architectures
 5. Data Corruption
 
-### solution for problem 1. N/A
-### solution for problem 2. N/A 
+### solution for problem 1. DO NOT OVERLOOK UNSTRUCTURED DATA
+### solution for problem 2. Manage your organization’s content where it lives
 ### solution for problem 3. N/A
-### solution for problem 4. N/A
-### solution for problem 5. N/A
+### solution for problem 4. Legacy IT Architectures
+### solution for problem 5. Prevent data loss through backups
 
 ## Decision Driver
-N/A
+Storage , Datacorruption
 
 ## References
 N/A
@@ -161,14 +161,14 @@ N/A
 4.Misplaced inventory
 5.Inaccurate recording of inventory levels
 
-### solution for problem 1. N/A
-### solution for problem 2. N/A
+### solution for problem 1. Set a Small Number of Priorities
+### solution for problem 2. Compress contents to save disk space.
 ### solution for problem 3. N/A
-### solution for problem 4. N/A
+### solution for problem 4. Simplify Processes Wherever Warehouse Workers are Involved
 ### solution for problem 5. N/A
 
 ## Decision Driver
-N/A
+Lack of space, storage
 
 ## References
 N/A
@@ -202,12 +202,12 @@ N/A
 2.Complexity
 3.Diversity
 
-### solution for problem 1. N/A
-### solution for problem 2. N/A
-### solution for problem 3. N/A
+### solution for problem 1. Manage your organization’s content where it lives
+### solution for problem 2. Educating business departments to become more familiar with data and analytics
+### solution for problem 3. Decide on your reporting points
 
 ## Decision Driver
-M/A
+Storage
 
 ## References
 N/A
